--- a/src/css/gs/variables/settings/_type.scss
+++ b/src/css/gs/variables/settings/_type.scss
@@ -1,9 +1,10 @@
-// Typography Settings
+// Typography and Text Settings
 // --
 
 $type-dir:  "../fonts";
-$type-name: 'rawline', sans-serif;
-$project-font-family: $type-name;
+$type-primary-name: 'OpenSans';
+// $type-secondary-name: 'AnotherType';
+$project-font-family: '#{$type-primary-name}', sans-serif;
 
 $font-size-base: 1rem; // 16px
 $font-size-xxl: 1.75rem; // 28px
