Theme Foundation | Import cross-browser CSSs

--- a/src/css/_custom.scss
+++ b/src/css/_custom.scss
@@ -9,4 +9,7 @@
 
 /* This file allows you to override default styles in one central location for easier upgrade and maintenance. */
 
+/* Project
+------------*/
 @import "gs";
+@import "cross-browser";
