--- a/src/css/cross-browser/_ie.scss
+++ b/src/css/cross-browser/_ie.scss
@@ -3,7 +3,7 @@
 
 .ie {
 
-  .gs:not(.liferay-instance) {
+  .#{$prefix}:not(.liferay-instance) {
 
 
   }
@@ -13,7 +13,7 @@
 // IE 11
 .ie.ie11 {
 
-  .gs:not(.liferay-instance) {
+  .#{$prefix}:not(.liferay-instance) {
 
 
   }
