--- a/src/css/gs/variables/settings/_type.scss
+++ b/src/css/gs/variables/settings/_type.scss
@@ -3,8 +3,9 @@
 
 $type-dir:  "../fonts";
 $type-primary-name: 'OpenSans';
-// $type-secondary-name: 'AnotherType';
 $project-font-family: '#{$type-primary-name}', sans-serif;
+// $type-secondary-name: 'AnotherType';
+// $project-secondary-font-family: '#{$type-secondary-name}', sans-serif;
 
 $font-size-base: 1rem; // 16px
 $font-size-xxl: 1.75rem; // 28px
@@ -19,14 +20,14 @@ $project-line-height: 1.15;
 $project-small-size: 0.725rem; // ~12px
 
 $font-weight-light: 300;
-$font-weight-normal: 500;
+$font-weight-normal: 400;
 $font-weight-semi-bold: 500;
 $font-weight-semi-bold2: 600;
 $font-weight-bold: 700;
 $font-weight-bolder: 800;
 
 // Headlines
-$headings-font-weight: $font-weight-semi-bold;
+$headings-font-weight: $font-weight-bold;
 $headings-line-height: 1.29;
 $headings-color: $dark;
 $headings-font-weight: $font-weight-bold;
