--- a/src/css/gs/variables/settings/_type.scss
+++ b/src/css/gs/variables/settings/_type.scss
@@ -38,3 +38,5 @@ $h3-font-size: 1.5rem;
 $h4-font-size: $font-size-lg; //18px
 $h5-font-size: 1rem; // 16px
 $h6-font-size: 0.875rem; // 14px
+
+$line-height-base:            1.5;
