--- a/src/css/gs/variables/_settings.scss
+++ b/src/css/gs/variables/_settings.scss
@@ -13,4 +13,5 @@ $project-shadow:   0px 2px 12px rgba(45, 70, 229, 0.12156862745098039);
 @import "settings/type";
 @import "settings/buttons";
 @import "settings/cards";
+@import "settings/link";
 
