--- a/src/css/gs/variables/settings/_cards.scss
+++ b/src/css/gs/variables/settings/_cards.scss
@@ -1,7 +1,7 @@
 // Card settings
 // ---
 
-$project-card-radius-base:          10px;
-$project-card-shadow:               $project-shadow;
-$project-card-default-bg-color:     $white;
-$project-card-padding:              15px;
+$card-proj-radius-base:          10px;
+$card-proj-shadow:               $project-shadow;
+$card-proj-default-bg-color:     $white;
+$card-proj-padding:              15px;
