Update base theme

--- a/src/css/_custom.scss
+++ b/src/css/_custom.scss
@@ -2,14 +2,12 @@
 
 /* inject:imports */
 
-@import 'liferay-font-awesome/scss/font-awesome';
-@import 'liferay-font-awesome/scss/glyphicons';
+@import "liferay-font-awesome/scss/font-awesome";
+@import "liferay-font-awesome/scss/glyphicons";
 
 /* endinject */
 
 /* This file allows you to override default styles in one central location for easier upgrade and maintenance. */
 
-/* Project
-------------*/
+@import "vendors";
 @import "gs";
-@import "cross-browser";
